--- a/css/style.css
+++ b/css/style.css
@@ -30,17 +30,45 @@ img{
 
 }
 
+.text-red{
+
+    color: red;
+}
+
+.text-line-through{
+
+    text-decoration-line: line-through;
+}
+
+.info > div:nth-child(2),
+.text-red{
+
+    font-weight: bold;
+
+}
+
+
+
 /*Header*/
+
+header{
+
+    background-color: #FF6900;
+
+}
 
 .navigation{
 
     display: flex;
-    background-color: #FF6900;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     color: white;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     min-height: 50px;
-
+    padding: 0 20px;
+ 
 }
 
 .category > ul{
@@ -61,6 +89,73 @@ img{
 
 /*Main*/
 
+.container{
+
+    width: 80%;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    
+    
+
+}
+
+.poster-card{
+     
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+}
+.card{
+
+    width: calc(100% / 3);
+    padding: 10px 20px;
+    
+}
+
+.card .info{
+
+    padding-top: 10px;
+    
+
+}
+
+.card-img{
+
+    position: relative;
+    
+
+}
+
+.heart{
+
+    background-color: white;
+    width: 30px;
+    line-height: 30px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 1.3rem;
+    position: absolute;
+    top: 5px;
+    right: 0;
+
+}
+
+.discount{
+
+    background-color: red;
+    color: white;
+    width: 40px;
+    line-height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+
+}
 
 /*Footer*/
 
