--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,8 @@ footer{
     margin-left: auto;
     margin-right: auto;
     justify-content: space-between;
-
+    padding: 0 20px;
+    
 }
 
 .social-icon ul {
